add missing data bar axis import, fdo#59578

Change-Id: Id035741b2372c76f9afe54f59f2203c5edfbb0ae